0.5
    - Added SNMP version 2c support for rrdbot-get [Stoned Elipot]
    - Fixed asynchronous resolving on FreeBSD
    - Fix bug where rrdbot-create ignored '-c' argument [benj]
    - Remove pid file when exiting [benj]

0.4
    - Reduced memory usage of SNMP requests
    - Added asynchronous DNS resolver
    - Added support for RRD files not in the normal places
    - Added SNMP version 2c support
    
0.3
    - Initial public release