@@ -43,7 +43,6 @@
 
 #include "config.h"
 
-#include <sys/types.h>
 #include <sys/param.h>
 #include <stdio.h>
 #include <stdlib.h>
